Deleted inline styles

--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,12 @@ body,
 #root > div {
   height: 100%;
 }
+
+.content {
+  padding: 24px;
+}
+
+.apierrors {
+  color: "#f44336";
+  font-size: 12px;
+}
